[gd_scene load_steps=12 format=3 uid="uid://c6g7s8iaj0k1l"]

[ext_resource type="Script" uid="uid://cbte8dyxvadpx" path="res://ui/chain_slots_ui.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c04fcslhuet8s" path="res://tou.png" id="3_koah0"]
[ext_resource type="Texture2D" uid="uid://bb0evkw1nfpca" path="res://UI_blockchain.png" id="3_rprlr"]

[sub_resource type="Animation" id="Animation_0trqd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.64705884, 1, 0.8784314, 0)]
}

[sub_resource type="Animation" id="Animation_koah0"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333333, 0.84),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.64705884, 1, 0.8784314, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rprlr"]
resource_name = "chimera_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.77),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_di47u"]
_data = {
&"RESET": SubResource("Animation_0trqd"),
&"appear": SubResource("Animation_koah0"),
&"chimera_animation": SubResource("Animation_rprlr")
}

[sub_resource type="Animation" id="Animation_2n7nh"]
length = 0.001

[sub_resource type="Animation" id="Animation_261cv"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 0.72),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_di47u"]
resource_name = "chimera_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.94),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2b4s"]
_data = {
&"RESET": SubResource("Animation_2n7nh"),
&"appear": SubResource("Animation_261cv"),
&"chimera_animation": SubResource("Animation_di47u")
}

[node name="ChainSlotsUI" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.086
offset_bottom = 8.119995
grow_horizontal = 2
script = ExtResource("1")

[node name="SlotA" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0

[node name="Background" type="ColorRect" parent="SlotA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="ActiveIndicator" type="ColorRect" parent="SlotA"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0, 0.6)

[node name="Icon" type="TextureRect" parent="SlotA"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_koah0")
expand_mode = 1
stretch_mode = 5

[node name="MonsterIcon" type="TextureRect" parent="SlotA"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="FlashOverlay" type="ColorRect" parent="SlotA"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="Control" type="Control" parent="SlotA"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -22.5
offset_right = 22.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlotA/Control"]
libraries = {
&"": SubResource("AnimationLibrary_di47u")
}

[node name="Sprite2D" type="Sprite2D" parent="SlotA/Control"]
modulate = Color(0.64705884, 1, 0.8784314, 0)
position = Vector2(23.000004, 22)
scale = Vector2(0.7040816, 0.6764706)
texture = ExtResource("3_rprlr")

[node name="SlotB" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="Background" type="ColorRect" parent="SlotB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="ActiveIndicator" type="ColorRect" parent="SlotB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0, 0.6)

[node name="Icon" type="TextureRect" parent="SlotB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_koah0")
expand_mode = 1
stretch_mode = 5

[node name="MonsterIcon" type="TextureRect" parent="SlotB"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="FlashOverlay" type="ColorRect" parent="SlotB"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="Control" type="Control" parent="SlotB"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -22.5
offset_right = 22.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="SlotB/Control"]
modulate = Color(1, 1, 1, 0)
position = Vector2(25, 23.5)
scale = Vector2(3.3809524, 3.2380953)
texture = ExtResource("3_rprlr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlotB/Control"]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_c2b4s")
}

[node name="ConnectionLine" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineLeft" type="Line2D" parent="ConnectionLine"]
points = PackedVector2Array(0, 20, 150, 20)
width = 3.0
default_color = Color(0.8, 0.8, 0.8, 1)

[node name="LineRight" type="Line2D" parent="ConnectionLine"]
points = PackedVector2Array(250, 20, 400, 20)
width = 3.0
default_color = Color(0.8, 0.8, 0.8, 1)

[node name="CenterIcon" type="TextureRect" parent="ConnectionLine"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
